--- a/views/fossils.pug
+++ b/views/fossils.pug
@@ -1,17 +1,12 @@
 extends layout
 
 block content
-  h1 Fossils Search Results
-
+  h1 Fossils List
   .container-fluid
     .row
       each fossil, index in fossils
-        div(class="col-sm-4", onclick=`buy(${index})`)
-          h3 #{fossil.name}
-          p Age: #{fossil.age} million years
-          p Location: #{fossil.location}
-
-      script.
-        function buy(itemNum){
-          alert(`You purchased item ${itemNum + 1}`);
-        }
+        .col-sm-4
+          a(href=`/resource/fossils/${fossil._id}`)
+            h3 #{fossil.name}
+            p Age: #{fossil.age} million years
+            p Location: #{fossil.location}
